--- a/FileExplorer/View/MainView.xaml
+++ b/FileExplorer/View/MainView.xaml
@@ -77,6 +77,7 @@
 
     <dx:DXTabbedWindow.InputBindings>
         <KeyBinding Gesture="Ctrl+T" Command="{Binding CreateNewTabCommand}" />
+        <KeyBinding Gesture="Ctrl+W" Command="{DXCommand '@ElementName(TabControl).SelectedItem.Close()'}" />
         <KeyBinding Gesture="Alt+Left" Command="{Binding SelectedItemContent.DataContext.MoveBackCommand, ElementName=TabControl}" />
         <KeyBinding Gesture="Alt+Right" Command="{Binding SelectedItemContent.DataContext.MoveNextCommand, ElementName=TabControl}" />
         <KeyBinding Gesture="Alt+Up" Command="{Binding SelectedItemContent.DataContext.MoveUpCommand, ElementName=TabControl}" />
