Context menu items moved to XAML

--- a/FileExplorer/Controls/FileListViewControl.xaml
+++ b/FileExplorer/Controls/FileListViewControl.xaml
@@ -363,6 +363,9 @@
                 <common:CustomMenuBehavior CommandParameter="{Binding SelectedItems, RelativeSource={RelativeSource AncestorType=dxg:GridControl}}" />
             </dxmvvm:Interaction.Behaviors>
             <dxb:PopupMenu.ItemLinks>
+                <dxb:BarButtonItemLink BarItemName="AddRemoveMenuItems" />
+                <dxb:BarItemLinkSeparator />
+                <dxb:BarSubItemLink BarItemName="ExpandToLevel" />
                 <dxb:BarButtonItemLink BarItemName="PinToQuickAccess" />
                 <dxb:BarButtonItemLink BarItemName="UnpinFromQuickAccess" />
                 <dxb:BarButtonItemLink BarItemName="Copy" />
