--- a/FileExplorer/View/CustomColumnView.xaml
+++ b/FileExplorer/View/CustomColumnView.xaml
@@ -1,4 +1,4 @@
-﻿<dx:DXWindow x:Class="FileExplorer.View.CustomColumnView"
+﻿<UserControl x:Class="FileExplorer.View.CustomColumnView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
@@ -7,11 +7,7 @@
              xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
              xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
              xmlns:controls="clr-namespace:FileExplorer.Controls"             
-             Width="400" SizeToContent="Height" WindowStartupLocation="CenterOwner">
-
-    <dx:DXWindow.Title>
-        <Binding Path="CustomColumn" Source="{StaticResource ResourceProvider}" />
-    </dx:DXWindow.Title>
+             MinWidth="400" MinHeight="100">
 
     <dxlc:LayoutControl Orientation="Vertical">
         <dxlc:LayoutItem Label="{Binding ColumnName, Source={StaticResource ResourceProvider}}">
@@ -27,8 +23,6 @@
         <dxlc:LayoutItem Label="{Binding Expression, Source={StaticResource ResourceProvider}}">
             <controls:ExpressionSelectorControl EditValue="{Binding UnboundExpression, UpdateSourceTrigger=PropertyChanged}" />
         </dxlc:LayoutItem>
-        <Button HorizontalAlignment="Right" Margin="0,10,0,0" Width="75" Height="25" Command="{DXCommand '@a($Window).Close()'}"
-                Content="{Binding OK, Source={StaticResource ResourceProvider}}" />
     </dxlc:LayoutControl>
     
-</dx:DXWindow>
+</UserControl>
