Fix some theming bugs. Release 3.6

--- a/FileExplorer/Controls/FileListViewControl.xaml
+++ b/FileExplorer/Controls/FileListViewControl.xaml
@@ -207,6 +207,7 @@
                              EditFormTemplate="{StaticResource EditFormTemplate}" EditFormShowMode="{Binding CurrentItem.Parent.IsRoot, RelativeSource={RelativeSource AncestorType=dxg:GridControl}, Converter={common:BooleanToEditFormShowModeConverter Inverse=True}}">
             <dxmvvm:Interaction.Behaviors>
                 <common:CustomColumnBehavior />
+                <common:AllowDragDropBehavior />
                 <common:DragDropFilesBehavior />
                 <common:FileModelTreeViewBehavior />
                 <common:SortOrderOnHeaderClickBehavior />
