Selected item count added.

--- a/FileExplorer/Controls/FileListViewControl.xaml
+++ b/FileExplorer/Controls/FileListViewControl.xaml
@@ -207,7 +207,6 @@
                              EditFormTemplate="{StaticResource EditFormTemplate}" EditFormShowMode="{Binding CurrentItem.Parent.IsRoot, RelativeSource={RelativeSource AncestorType=dxg:GridControl}, Converter={common:BooleanToEditFormShowModeConverter Inverse=True}}">
             <dxmvvm:Interaction.Behaviors>
                 <common:CustomColumnBehavior />
-                <common:AllowDragDropBehavior />
                 <common:DragDropFilesBehavior />
                 <common:FileModelTreeViewBehavior />
                 <common:SortOrderOnHeaderClickBehavior />
@@ -355,7 +354,22 @@
     </dxg:GridControl.GroupSummary>
 
     <dxg:GridControl.TotalSummary>
-        <dxg:GridSummaryItem FieldName="Name" SummaryType="Count" Alignment="Left" DisplayFormat="{Binding TotalFormat, Source={StaticResource ResourceProvider}}" />
+        <dxg:GridSummaryItem FieldName="Name" SummaryType="Count" Alignment="Left">
+            <dxg:GridSummaryItem.FixedTotalSummaryElementStyle>
+                <Style TargetType="Run">
+                    <Setter Property="Text" >
+                        <Setter.Value>
+                            <MultiBinding Mode="OneWay" StringFormat="{}{0}: {1}   &#x2759;   {2}: {3}">
+                                <Binding Path="Total" Source="{StaticResource ResourceProvider}" />
+                                <Binding Path="Value" />
+                                <Binding Path="Selected" Source="{StaticResource ResourceProvider}" />
+                                <Binding RelativeSource="{RelativeSource AncestorType=dxg:GridControl}" Path="SelectedItems.Count" />                                
+                            </MultiBinding>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </dxg:GridSummaryItem.FixedTotalSummaryElementStyle>
+        </dxg:GridSummaryItem>
     </dxg:GridControl.TotalSummary>
 
     <dxb:BarManager.DXContextMenu>
